--- a/css/style.css
+++ b/css/style.css
@@ -461,11 +461,11 @@ header .nav__container {
       -ms-flex-align: center;
           align-items: center;
   padding: 16px 16px;
-  -webkit-box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
-          box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
+  -webkit-box-shadow: 0px 5px 5px -5px rgba(87, 89, 91, 0.6);
+          box-shadow: 0px 5px 5px -5px rgba(87, 89, 91, 0.6);
 }
 header .nav__container .navigation__home {
-  width: 10%;
+  width: 15%;
 }
 header .nav__container .navigation__home .navigation__img {
   width: 100%;
