--- a/css/_header.scss
+++ b/css/_header.scss
@@ -22,7 +22,7 @@ header {
         flex-direction: row;
         justify-content: space-between;
         align-items: center;
-        padding: 16px 16px;
+        padding: 0 16px;
         box-shadow: 0px 5px 5px -5px rgba(87, 89, 91, 0.6);
 
 
@@ -59,6 +59,7 @@ header {
             flex-direction: row;
             justify-content: flex-start;
             align-items: center;
+            max-height: 68px;
 
             li {
                 list-style: none;
@@ -69,13 +70,17 @@ header {
                     font-size: 16px;
                     line-height: 20px;
                     color:#000;
-                    border: 1px solid transparent;
-                    border-radius: 30px;
-                    padding: 5px 25px;
+                    // border: 1px solid transparent;
+                    // border-radius: 30px;
+                    padding: 24px 24px;
 
                     &:hover {
-                        color:#000;
+                        color:red;
                     }
+                    
+                }
+                .active {
+                    background-color: rgb(0 0 0 / 20%);
                 }
             }
 
@@ -92,6 +97,7 @@ header {
             width: 10%;
             display: none;
             position: relative;
+            height: 68px;
 
             #navigation-mobile__toggle {
                 opacity: 0;
@@ -127,7 +133,7 @@ header {
                 z-index: 1;
 
                 @include for-phone-only {
-                    top: 40px;
+                    top: 36px;
                     width: 20px;
                 }
             }
@@ -160,23 +166,23 @@ header {
                 visibility: hidden;
                 top: 0;
                 left: -100%;
-                // width: 240px;
+                width: 100%;
                 height: 100%;
                 margin-top: 86px;
                 padding: 24px 0;
                 list-style: none;
                 backdrop-filter: blur(4px);
                 background: rgb(255,255,255);
-background: linear-gradient(180deg, rgba(255,255,255,0) 0%, rgba(230,16,16,0.7039858179599965) 67%, rgba(255,255,255,1) 100%);
+                background: linear-gradient(180deg, rgb(255 255 255) 0%, rgba(230, 16, 16, 0.703985818) 67%, white 100%);
 
                 box-shadow: 1px 8px 8px rgb(0 0 0 / 20%);
                 transition-duration: .25s;
 
                 .navigation-mobile__item {
                     display: block;
-                    padding: 16px 16px;
-                    color: #4b4a4a;
-                    font-size: 16px;
+                    padding: 24px;
+                    color: rgb(44, 43, 43);
+                    font-size: 18px;
                     font-weight: 600;
                     text-decoration: none;
                     transition-duration: .25s;
