--- a/css/style.css
+++ b/css/style.css
@@ -460,7 +460,7 @@ header .nav__container {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  padding: 16px 16px;
+  padding: 0 16px;
   -webkit-box-shadow: 0px 5px 5px -5px rgba(87, 89, 91, 0.6);
           box-shadow: 0px 5px 5px -5px rgba(87, 89, 91, 0.6);
 }
@@ -502,6 +502,7 @@ header .nav__container .navigation__menu {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  max-height: 68px;
 }
 header .nav__container .navigation__menu li {
   list-style: none;
@@ -513,12 +514,13 @@ header .nav__container .navigation__menu li a {
   font-size: 16px;
   line-height: 20px;
   color: #000;
-  border: 1px solid transparent;
-  border-radius: 30px;
-  padding: 5px 25px;
+  padding: 24px 24px;
 }
 header .nav__container .navigation__menu li a:hover {
-  color: #000;
+  color: red;
+}
+header .nav__container .navigation__menu li .active {
+  background-color: rgba(0, 0, 0, 0.2);
 }
 @media (max-width: 768px) {
   header .nav__container .navigation__menu {
@@ -534,6 +536,7 @@ header .nav__container .navigation__mobile {
   width: 10%;
   display: none;
   position: relative;
+  height: 68px;
 }
 header .nav__container .navigation__mobile #navigation-mobile__toggle {
   opacity: 0;
@@ -570,7 +573,7 @@ header .nav__container .navigation__mobile .navigation-mobile__btn {
 }
 @media (max-width: 599px) {
   header .nav__container .navigation__mobile .navigation-mobile__btn {
-    top: 40px;
+    top: 36px;
     width: 20px;
   }
 }
@@ -600,6 +603,7 @@ header .nav__container .navigation__mobile .navigation-mobile__box {
   visibility: hidden;
   top: 0;
   left: -100%;
+  width: 100%;
   height: 100%;
   margin-top: 86px;
   padding: 24px 0;
@@ -607,8 +611,8 @@ header .nav__container .navigation__mobile .navigation-mobile__box {
   -webkit-backdrop-filter: blur(4px);
           backdrop-filter: blur(4px);
   background: white;
-  background: -webkit-gradient(linear, left top, left bottom, from(rgba(255, 255, 255, 0)), color-stop(67%, rgba(230, 16, 16, 0.703985818)), to(white));
-  background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, rgba(230, 16, 16, 0.703985818) 67%, white 100%);
+  background: -webkit-gradient(linear, left top, left bottom, from(white), color-stop(67%, rgba(230, 16, 16, 0.703985818)), to(white));
+  background: linear-gradient(180deg, white 0%, rgba(230, 16, 16, 0.703985818) 67%, white 100%);
   -webkit-box-shadow: 1px 8px 8px rgba(0, 0, 0, 0.2);
           box-shadow: 1px 8px 8px rgba(0, 0, 0, 0.2);
   -webkit-transition-duration: 0.25s;
@@ -616,9 +620,9 @@ header .nav__container .navigation__mobile .navigation-mobile__box {
 }
 header .nav__container .navigation__mobile .navigation-mobile__box .navigation-mobile__item {
   display: block;
-  padding: 16px 16px;
-  color: #4b4a4a;
-  font-size: 16px;
+  padding: 24px;
+  color: #2c2b2b;
+  font-size: 18px;
   font-weight: 600;
   text-decoration: none;
   -webkit-transition-duration: 0.25s;
@@ -684,12 +688,12 @@ header .nav__container .navigation__mobile .navigation-mobile__box .navigation-m
 }
 @media (max-width: 599px) {
   .title__section h2 {
-    text-align: right;
+    text-align: center;
   }
 }
 @media (max-width: 599px) {
   .title__section h1 {
-    text-align: right;
+    text-align: center;
   }
 }
 @media (max-width: 599px) {
