--- a/css/style.scss
+++ b/css/style.scss
@@ -5,13 +5,9 @@
 @import "_rent.scss";
 @import "_entry.scss";
 @import "_legalisation.scss";
-@import "money.scss";
+@import "_money.scss";
 @import "_fop.scss";
 @import "_lviv.scss";
-// @import "_sort.scss";
-// @import "_sortnews.scss";
-// @import "_add.scss";
-// @import "_news.scss";
 // @import "_newsactive.scss";
 // @import "_education.scss";
 // @import "_educationfilter.scss";
@@ -22,6 +18,7 @@
 // @import "_fixes.scss";
 // @import "slick.scss";
 // @import "_terms.scss";
+
 
 @font-face {
     font-family: Golos;
