--- a/css/_header.scss
+++ b/css/_header.scss
@@ -11,7 +11,6 @@
 }
 
 header {
-
     .nav__container {
         position: fixed;
         left: 0;
@@ -20,9 +19,11 @@ header {
         background-color: white;
         display: flex;
         flex-direction: row;
-        justify-content: space-between;
+        justify-content: flex-start;
+        @include for-tablet-portrait {
+            justify-content: space-between;
+        }
         align-items: center;
-        padding: 0 16px;
         box-shadow: 0px 5px 5px -5px rgba(87, 89, 91, 0.6);
 
 
@@ -39,7 +40,7 @@ header {
 
             .navigation__img {
                 width: 100%;
-                margin-right: 20px;
+                // margin-right: 20px;
             }
 
             @include for-tablet-portrait {
@@ -53,7 +54,7 @@ header {
         }
 
         .navigation__menu {
-            width: 50%;
+            width: 84%;
             flex-grow: 2;
             display: flex;
             flex-direction: row;
