--- a/css/_rent.scss
+++ b/css/_rent.scss
@@ -1,85 +1,106 @@
 $color_text: #4b4a4a;
 %h1 {
-    font-family: Golos;
-    font-size: 36px;
-    font-weight: 900;
-    line-height: 43px;
-    color: $color_text;
+  font-family: Golos;
+  font-size: 36px;
+  font-weight: 900;
+  line-height: 43px;
+  color: $color_text;
 }
 
 %h2 {
-    font-family: Golos;
-    font-size: 27px;
-    font-weight: 700;
-    line-height: 27px;
-    color: $color_text;
+  font-family: Golos;
+  font-size: 27px;
+  font-weight: 700;
+  line-height: 27px;
+  color: $color_text;
 }
 %BodyM {
-    font-family: Golos;
-    font-size: 16px;
-    font-weight: 500;
-    line-height: 19px;
-    color: $color_text;
+  font-family: Golos;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 19px;
+  color: $color_text;
 }
 .rent__section {
-    padding: 116px 16px 16px;
-    h2 {
-        @extend %h2;
-        margin-bottom: 24px;
+  padding: 116px 16px 16px;
+  h2 {
+    @extend %h2;
+    margin-bottom: 24px;
+    @include for-phone-only {
+      font-size: 24px;
+      line-height: 29px;
+      text-align: center;
+    }
+  }
+  .rent__box {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: flex-start;
+    flex-wrap: wrap;
+    .rent__link {
+      text-decoration: none;
+      width: 20%;
+      
+      @include for-phone-only {
+        width: 49%;
+      }
+      .rent__item {
+        box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+        transition: 0.3s;
+        border-radius: 5px;
+        height: 200px;
+        margin: 16px;
+        padding: 16px;
         @include for-phone-only {
-            font-size: 24px;
-            line-height: 29px;
+          height: 130px;
+          margin: 8px;
+          padding: 16px 8px 8px;
         }
-    }
-    .rent__box {
         display: flex;
-        flex-direction: row;
-        justify-content: flex-start;
-        align-items: flex-start;
-        flex-wrap: wrap;
+        flex-direction: column;
+        justify-content: space-between;
+        align-items: center;
 
-        .rent__item {
-            box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-            transition: 0.3s;
-            border-radius: 5px;
-            width: 15%;
-            height: 100px;
-            margin: 16px;
-            padding: 8px;
-            box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-            transition: 0.3s;
-            border-radius: 5px;
-            &:hover {
-                box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
-            }
-            @include for-phone-only {
-                width: 36%;
-                height: 120px;
-            }
-            // @include for-tablet-portrait {
-            //     width: 27%;
-            //     height: 120px;
-            // }
-            .rent__link {
-                text-decoration: none;
-                i {
-                    font-weight: bold;
-                    font-size: 24px;
-                    color:lightskyblue;
-                    margin: 0 16px 8px 0;
-                }
-                .rent__name {
-                    font-family: Golos;
-                    font-size: 12px;
-                    font-weight: 400;
-                    line-height: 14px;
-                    color: #4b4a4a;
-                }
-            }
-            .card:hover {
-                box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
-            }
+        &:hover {
+          box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
         }
+        
+        // @include for-tablet-portrait {
+        //     width: 27%;
+        //     height: 120px;
+        // }
+        .rent__logo {
+          width: 50%;
+          margin-bottom:16px;
+          @include for-phone-only {
+            margin-bottom: 8px;
+          }
+        }
+        .rent__title {
+          font-family: Golos;
+          font-size: 14px;
+          font-weight: 400;
+          color: #4b4a4a;
+          margin-bottom: 16px;
+          text-align: center;
+          @include for-phone-only {
+            margin-bottom: 8px;
+          }
+      }
+        .rent__text {
+          font-family: Golos;
+          font-size: 12px;
+          font-weight: 400;
+          color: #4b4a4a;
+          text-align: center;
+          @include for-phone-only {
+            font-size: 8px;
+            margin-bottom: 8px;
+          }
+        }
+      }
     }
-
+  }
 }
+
