--- a/css/style.css
+++ b/css/style.css
@@ -110,6 +110,8 @@ section {
 
 body {
   line-height: 1;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
 }
 
 ol,
@@ -454,22 +456,27 @@ header .nav__container {
   -webkit-box-direction: normal;
       -ms-flex-direction: row;
           flex-direction: row;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  padding: 0 16px;
   -webkit-box-shadow: 0px 5px 5px -5px rgba(87, 89, 91, 0.6);
           box-shadow: 0px 5px 5px -5px rgba(87, 89, 91, 0.6);
+}
+@media (max-width: 768px) {
+  header .nav__container {
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+  }
 }
 header .nav__container .navigation__home {
   width: 15%;
 }
 header .nav__container .navigation__home .navigation__img {
   width: 100%;
-  margin-right: 20px;
 }
 @media (max-width: 768px) {
   header .nav__container .navigation__home {
@@ -485,7 +492,7 @@ header .nav__container .navigation__home .navigation__img {
   }
 }
 header .nav__container .navigation__menu {
-  width: 50%;
+  width: 84%;
   -webkit-box-flex: 2;
       -ms-flex-positive: 2;
           flex-grow: 2;
@@ -649,7 +656,7 @@ header .nav__container .navigation__mobile .navigation-mobile__box .navigation-m
   }
 }
 
-.legalisation__section h1, .title__section h1 {
+.legalisation__section h1, .container .title__section h1 {
   font-family: Golos;
   font-size: 36px;
   font-weight: 900;
@@ -657,7 +664,7 @@ header .nav__container .navigation__mobile .navigation-mobile__box .navigation-m
   color: #4b4a4a;
 }
 
-.about__section h1, .about__section h2, .fop__section h2, .money__section h2, .entry__section h2, .rent__section h2, .title__section h2 {
+.about__section h1, .about__section h2, .fop__section h2, .money__section h2, .entry__section h2, .rent__section h2, .container .title__section h2 {
   font-family: Golos;
   font-size: 27px;
   font-weight: 700;
@@ -665,8 +672,9 @@ header .nav__container .navigation__mobile .navigation-mobile__box .navigation-m
   color: #4b4a4a;
 }
 
-.title__section {
-  padding: 156px 16px;
+.container .title__section {
+  margin-top: 100px;
+  padding: 16px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -677,34 +685,86 @@ header .nav__container .navigation__mobile .navigation-mobile__box .navigation-m
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  -webkit-box-align: end;
-      -ms-flex-align: end;
-          align-items: flex-end;
-}
-@media (max-width: 768px) {
-  .title__section {
-    padding: 140px 30px;
-  }
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
 }
 @media (max-width: 599px) {
-  .title__section h2 {
+  .container .title__section h2 {
     text-align: center;
   }
 }
 @media (max-width: 599px) {
-  .title__section h1 {
+  .container .title__section h1 {
     text-align: center;
   }
 }
 @media (max-width: 599px) {
-  .title__section {
+  .container .title__section {
     -ms-flex-item-align: center;
         -ms-grid-row-align: center;
         align-self: center;
   }
 }
+.container .lesson {
+  min-height: 250px;
+  padding: 16px;
+  background-image: url(../img/Slider-1-background.jpg);
+  background-position: top;
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+@media (max-width: 599px) {
+  .container .lesson {
+    background-image: url(../img/Slider-1-background-phone.jpg);
+    background-position: right;
+    background-size: cover;
+  }
+}
+.container .lesson h3 {
+  font-size: 21px;
+  font-weight: 700;
+  line-height: 21px;
+  color: red;
+  margin: 16px 0 8px;
+}
+.container .lesson .text {
+  font-size: 16px;
+  font-weight: 700;
+  line-height: 19px;
+  color: #4b4a4a;
+  margin: 16px 0 8px;
+}
+.container .meet {
+  min-height: 250px;
+  padding: 16px;
+  background-image: url(../img/Slider-2-background.jpg);
+  background-position: top;
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+@media (max-width: 599px) {
+  .container .meet {
+    background-position: center;
+    background-size: cover;
+  }
+}
+.container .meet h3 {
+  font-size: 21px;
+  font-weight: 700;
+  line-height: 21px;
+  color: white;
+  margin: 16px 0 8px;
+}
+.container .meet .text {
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 19px;
+  color: white;
+  margin: 16px 0 8px;
+}
 
-.legalisation__section h1, .title__section h1 {
+.legalisation__section h1, .container .title__section h1 {
   font-family: Golos;
   font-size: 36px;
   font-weight: 900;
@@ -712,7 +772,7 @@ header .nav__container .navigation__mobile .navigation-mobile__box .navigation-m
   color: #4b4a4a;
 }
 
-.about__section h1, .about__section h2, .fop__section h2, .money__section h2, .entry__section h2, .rent__section h2, .title__section h2 {
+.about__section h1, .about__section h2, .fop__section h2, .money__section h2, .entry__section h2, .rent__section h2, .container .title__section h2 {
   font-family: Golos;
   font-size: 27px;
   font-weight: 700;
@@ -738,6 +798,7 @@ header .nav__container .navigation__mobile .navigation-mobile__box .navigation-m
   .rent__section h2 {
     font-size: 24px;
     line-height: 29px;
+    text-align: center;
   }
 }
 .rent__section .rent__box {
@@ -757,52 +818,86 @@ header .nav__container .navigation__mobile .navigation-mobile__box .navigation-m
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
 }
-.rent__section .rent__box .rent__item {
-  -webkit-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-          box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+.rent__section .rent__box .rent__link {
+  text-decoration: none;
+  width: 20%;
+}
+@media (max-width: 599px) {
+  .rent__section .rent__box .rent__link {
+    width: 49%;
+  }
+}
+.rent__section .rent__box .rent__link .rent__item {
+  -webkit-box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+          box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
   -webkit-transition: 0.3s;
   transition: 0.3s;
   border-radius: 5px;
-  width: 15%;
-  height: 100px;
+  height: 200px;
   margin: 16px;
-  padding: 8px;
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-  transition: 0.3s;
-  border-radius: 5px;
-}
-.rent__section .rent__box .rent__item:hover {
-  -webkit-box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
-          box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
+  padding: 16px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 @media (max-width: 599px) {
-  .rent__section .rent__box .rent__item {
-    width: 36%;
-    height: 120px;
+  .rent__section .rent__box .rent__link .rent__item {
+    height: 130px;
+    margin: 8px;
+    padding: 16px 8px 8px;
   }
 }
-.rent__section .rent__box .rent__item .rent__link {
-  text-decoration: none;
+.rent__section .rent__box .rent__link .rent__item:hover {
+  -webkit-box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
+          box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
 }
-.rent__section .rent__box .rent__item .rent__link i {
-  font-weight: bold;
-  font-size: 24px;
-  color: lightskyblue;
-  margin: 0 16px 8px 0;
+.rent__section .rent__box .rent__link .rent__item .rent__logo {
+  width: 50%;
+  margin-bottom: 16px;
 }
-.rent__section .rent__box .rent__item .rent__link .rent__name {
+@media (max-width: 599px) {
+  .rent__section .rent__box .rent__link .rent__item .rent__logo {
+    margin-bottom: 8px;
+  }
+}
+.rent__section .rent__box .rent__link .rent__item .rent__title {
+  font-family: Golos;
+  font-size: 14px;
+  font-weight: 400;
+  color: #4b4a4a;
+  margin-bottom: 16px;
+  text-align: center;
+}
+@media (max-width: 599px) {
+  .rent__section .rent__box .rent__link .rent__item .rent__title {
+    margin-bottom: 8px;
+  }
+}
+.rent__section .rent__box .rent__link .rent__item .rent__text {
   font-family: Golos;
   font-size: 12px;
   font-weight: 400;
-  line-height: 14px;
   color: #4b4a4a;
+  text-align: center;
 }
-.rent__section .rent__box .rent__item .card:hover {
-  -webkit-box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
-          box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
+@media (max-width: 599px) {
+  .rent__section .rent__box .rent__link .rent__item .rent__text {
+    font-size: 8px;
+    margin-bottom: 8px;
+  }
 }
 
-.legalisation__section h1, .title__section h1 {
+.legalisation__section h1, .container .title__section h1 {
   font-family: Golos;
   font-size: 36px;
   font-weight: 900;
@@ -810,7 +905,7 @@ header .nav__container .navigation__mobile .navigation-mobile__box .navigation-m
   color: #4b4a4a;
 }
 
-.about__section h1, .about__section h2, .fop__section h2, .money__section h2, .entry__section h2, .title__section h2, .rent__section h2 {
+.about__section h1, .about__section h2, .fop__section h2, .money__section h2, .entry__section h2, .container .title__section h2, .rent__section h2 {
   color: #4b4a4a;
   font-family: Golos;
   font-size: 27px;
@@ -907,7 +1002,7 @@ header .nav__container .navigation__mobile .navigation-mobile__box .navigation-m
   max-width: 600px;
 }
 
-.legalisation__section h1, .title__section h1 {
+.legalisation__section h1, .container .title__section h1 {
   font-family: Golos;
   font-size: 36px;
   font-weight: 900;
@@ -915,7 +1010,7 @@ header .nav__container .navigation__mobile .navigation-mobile__box .navigation-m
   color: #4b4a4a;
 }
 
-.about__section h1, .about__section h2, .fop__section h2, .money__section h2, .title__section h2, .rent__section h2, .entry__section h2 {
+.about__section h1, .about__section h2, .fop__section h2, .money__section h2, .container .title__section h2, .rent__section h2, .entry__section h2 {
   color: #4b4a4a;
   font-family: Golos;
   font-size: 27px;
@@ -1014,7 +1109,7 @@ header .nav__container .navigation__mobile .navigation-mobile__box .navigation-m
   padding-left: 16px;
 }
 
-.title__section h1, .legalisation__section h1 {
+.container .title__section h1, .legalisation__section h1 {
   font-family: Golos;
   font-size: 36px;
   font-weight: 900;
@@ -1022,7 +1117,7 @@ header .nav__container .navigation__mobile .navigation-mobile__box .navigation-m
   color: #4b4a4a;
 }
 
-.about__section h1, .about__section h2, .fop__section h2, .money__section h2, .title__section h2, .rent__section h2, .entry__section h2 {
+.about__section h1, .about__section h2, .fop__section h2, .money__section h2, .container .title__section h2, .rent__section h2, .entry__section h2 {
   color: #4b4a4a;
   font-family: Golos;
   font-size: 27px;
@@ -1095,7 +1190,7 @@ header .nav__container .navigation__mobile .navigation-mobile__box .navigation-m
   max-width: 600px;
 }
 
-.title__section h1, .legalisation__section h1 {
+.container .title__section h1, .legalisation__section h1 {
   font-family: Golos;
   font-size: 36px;
   font-weight: 900;
@@ -1103,7 +1198,7 @@ header .nav__container .navigation__mobile .navigation-mobile__box .navigation-m
   color: #4b4a4a;
 }
 
-.about__section h1, .about__section h2, .fop__section h2, .title__section h2, .rent__section h2, .entry__section h2, .money__section h2 {
+.about__section h1, .about__section h2, .fop__section h2, .container .title__section h2, .rent__section h2, .entry__section h2, .money__section h2 {
   color: #4b4a4a;
   font-family: Golos;
   font-size: 27px;
@@ -1171,7 +1266,7 @@ header .nav__container .navigation__mobile .navigation-mobile__box .navigation-m
   margin-bottom: 16px;
 }
 
-.title__section h1, .legalisation__section h1 {
+.container .title__section h1, .legalisation__section h1 {
   font-family: Golos;
   font-size: 36px;
   font-weight: 900;
@@ -1179,7 +1274,7 @@ header .nav__container .navigation__mobile .navigation-mobile__box .navigation-m
   color: #4b4a4a;
 }
 
-.about__section h1, .about__section h2, .title__section h2, .rent__section h2, .entry__section h2, .money__section h2, .fop__section h2 {
+.about__section h1, .about__section h2, .container .title__section h2, .rent__section h2, .entry__section h2, .money__section h2, .fop__section h2 {
   color: #4b4a4a;
   font-family: Golos;
   font-size: 27px;
@@ -1290,7 +1385,7 @@ header .nav__container .navigation__mobile .navigation-mobile__box .navigation-m
   margin: 0 auto;
 }
 
-.title__section h1, .legalisation__section h1 {
+.container .title__section h1, .legalisation__section h1 {
   font-family: Golos;
   font-size: 36px;
   font-weight: 900;
@@ -1298,7 +1393,7 @@ header .nav__container .navigation__mobile .navigation-mobile__box .navigation-m
   color: #4b4a4a;
 }
 
-.title__section h2, .rent__section h2, .entry__section h2, .money__section h2, .fop__section h2, .about__section h2, .about__section h1 {
+.container .title__section h2, .rent__section h2, .entry__section h2, .money__section h2, .fop__section h2, .about__section h2, .about__section h1 {
   color: #4b4a4a;
   font-family: Golos;
   font-size: 27px;
