--- a/css/_header.scss
+++ b/css/_header.scss
@@ -11,8 +11,10 @@
 }
 
 header {
+
     .nav__container {
         position: fixed;
+        z-index: 1000;
         left: 0;
         right: 0;
         top: 0;
