--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 html,
 body,
 div,
@@ -445,6 +444,7 @@ textarea {
 
 header .nav__container {
   position: fixed;
+  z-index: 1000;
   left: 0;
   right: 0;
   top: 0;
@@ -656,7 +656,7 @@ header .nav__container .navigation__mobile .navigation-mobile__box .navigation-m
   }
 }
 
-.legalisation__section h1, .container .title__section h1 {
+.container .title__section h1 {
   font-family: Golos;
   font-size: 36px;
   font-weight: 900;
@@ -673,7 +673,7 @@ header .nav__container .navigation__mobile .navigation-mobile__box .navigation-m
 }
 
 .container .title__section {
-  margin-top: 100px;
+  margin: 134px 0 50px;
   padding: 16px;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -685,57 +685,69 @@ header .nav__container .navigation__mobile .navigation-mobile__box .navigation-m
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  -webkit-box-align: start;
-      -ms-flex-align: start;
-          align-items: flex-start;
-}
-@media (max-width: 599px) {
-  .container .title__section h2 {
-    text-align: center;
-  }
-}
-@media (max-width: 599px) {
-  .container .title__section h1 {
-    text-align: center;
-  }
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 @media (max-width: 599px) {
   .container .title__section {
-    -ms-flex-item-align: center;
-        -ms-grid-row-align: center;
-        align-self: center;
+    margin: 100px 0 32px;
   }
 }
-.container .lesson {
+.container .carousel .carousel-control-prev-icon {
+  background-image: url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23ff0000'><path d='M11.354 1.646a.5.5 0 0 1 0 .708L5.707 8l5.647 5.646a.5.5 0 0 1-.708.708l-6-6a.5.5 0 0 1 0-.708l6-6a.5.5 0 0 1 .708 0z'/></svg>");
+}
+@media (max-width: 599px) {
+  .container .carousel .carousel-control-prev-icon {
+    background-image: none;
+  }
+}
+.container .carousel .carousel-control-next-icon {
+  background-image: url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23ff0000'><path d='M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708z'/></svg>");
+}
+@media (max-width: 599px) {
+  .container .carousel .carousel-control-next-icon {
+    background-image: none;
+  }
+}
+.container .carousel .lessons {
   min-height: 250px;
-  padding: 16px;
+  padding: 16px 0 16px 200px;
   background-image: url(../img/Slider-1-background.jpg);
   background-position: top;
   background-size: cover;
   background-repeat: no-repeat;
 }
 @media (max-width: 599px) {
-  .container .lesson {
+  .container .carousel .lessons {
     background-image: url(../img/Slider-1-background-phone.jpg);
     background-position: right;
     background-size: cover;
+    padding: 16px;
   }
 }
-.container .lesson h3 {
-  font-size: 21px;
+.container .carousel .lessons h3 {
+  font-size: 24px;
   font-weight: 700;
-  line-height: 21px;
-  color: red;
-  margin: 16px 0 8px;
+  line-height: 27px;
+  color: #4b4a4a;
+  margin: 32px 0 8px;
 }
-.container .lesson .text {
+.container .carousel .lessons h3 span {
+  color: #cc0001;
+}
+.container .carousel .lessons .text {
   font-size: 16px;
   font-weight: 700;
-  line-height: 19px;
+  line-height: 21px;
   color: #4b4a4a;
   margin: 16px 0 8px;
 }
-.container .meet {
+.container .carousel .lessons .text span {
+  color: #cc0001;
+}
+.container .carousel .meet {
+  text-align: center;
   min-height: 250px;
   padding: 16px;
   background-image: url(../img/Slider-2-background.jpg);
@@ -744,27 +756,27 @@ header .nav__container .navigation__mobile .navigation-mobile__box .navigation-m
   background-repeat: no-repeat;
 }
 @media (max-width: 599px) {
-  .container .meet {
+  .container .carousel .meet {
     background-position: center;
     background-size: cover;
   }
 }
-.container .meet h3 {
+.container .carousel .meet h3 {
   font-size: 21px;
   font-weight: 700;
+  line-height: 27px;
+  color: white;
+  margin: 32px 0 8px;
+}
+.container .carousel .meet .text {
+  font-size: 16px;
+  font-weight: 500;
   line-height: 21px;
   color: white;
   margin: 16px 0 8px;
 }
-.container .meet .text {
-  font-size: 16px;
-  font-weight: 500;
-  line-height: 19px;
-  color: white;
-  margin: 16px 0 8px;
-}
 
-.legalisation__section h1, .container .title__section h1 {
+.container .title__section h1 {
   font-family: Golos;
   font-size: 36px;
   font-weight: 900;
@@ -780,7 +792,7 @@ header .nav__container .navigation__mobile .navigation-mobile__box .navigation-m
   color: #4b4a4a;
 }
 
-.money__section ul li, .legalisation__section .demo .legalisation__text, .legalisation__section .demo ol, .entry__section h5 {
+.money__section ul li, .entry__section h5 {
   font-family: Golos;
   font-size: 16px;
   font-weight: 500;
@@ -897,7 +909,7 @@ header .nav__container .navigation__mobile .navigation-mobile__box .navigation-m
   }
 }
 
-.legalisation__section h1, .container .title__section h1 {
+.container .title__section h1 {
   font-family: Golos;
   font-size: 36px;
   font-weight: 900;
@@ -913,7 +925,7 @@ header .nav__container .navigation__mobile .navigation-mobile__box .navigation-m
   line-height: 27px;
 }
 
-.about__section .item .title h3, .money__section h3, .legalisation__section .demo h2 {
+.about__section .item .title h3, .money__section h3 {
   font-family: Golos;
   font-size: 21px;
   font-weight: 500;
@@ -921,7 +933,7 @@ header .nav__container .navigation__mobile .navigation-mobile__box .navigation-m
   color: #4b4a4a;
 }
 
-.about__section .item h4, .legalisation__section .demo .legalisation__title, .legalisation__section .demo h3, .entry__section h4, .entry__section h3 {
+.about__section .item h4, .entry__section h4, .entry__section h3 {
   font-family: Golos;
   font-size: 16px;
   font-weight: 700;
@@ -929,7 +941,7 @@ header .nav__container .navigation__mobile .navigation-mobile__box .navigation-m
   color: #4b4a4a;
 }
 
-.money__section ul li, .legalisation__section .demo .legalisation__text, .legalisation__section .demo ol, .entry__section h5 {
+.money__section ul li, .entry__section h5 {
   font-family: Golos;
   font-size: 16px;
   font-weight: 500;
@@ -1002,7 +1014,7 @@ header .nav__container .navigation__mobile .navigation-mobile__box .navigation-m
   max-width: 600px;
 }
 
-.legalisation__section h1, .container .title__section h1 {
+.container .title__section h1 {
   font-family: Golos;
   font-size: 36px;
   font-weight: 900;
@@ -1018,7 +1030,7 @@ header .nav__container .navigation__mobile .navigation-mobile__box .navigation-m
   line-height: 27px;
 }
 
-.about__section .item .title h3, .money__section h3, .legalisation__section .demo h2 {
+.about__section .item .title h3, .money__section h3 {
   font-family: Golos;
   font-size: 21px;
   font-weight: 500;
@@ -1026,7 +1038,7 @@ header .nav__container .navigation__mobile .navigation-mobile__box .navigation-m
   color: #4b4a4a;
 }
 
-.about__section .item h4, .legalisation__section .demo .legalisation__title, .legalisation__section .demo h3, .entry__section h3, .entry__section h4 {
+.about__section .item h4, .entry__section h3, .entry__section h4 {
   font-family: Golos;
   font-size: 16px;
   font-weight: 700;
@@ -1034,7 +1046,7 @@ header .nav__container .navigation__mobile .navigation-mobile__box .navigation-m
   color: #4b4a4a;
 }
 
-.money__section ul li, .legalisation__section .demo .legalisation__text, .legalisation__section .demo ol, .entry__section h5 {
+.money__section ul li, .entry__section h5 {
   font-family: Golos;
   font-size: 16px;
   font-weight: 500;
@@ -1052,64 +1064,37 @@ header .nav__container .navigation__mobile .navigation-mobile__box .navigation-m
 .legalisation__section {
   padding: 116px 16px 16px;
 }
-.legalisation__section h1 {
+.legalisation__section h2 {
+  color: #4b4a4a;
+  font-family: Golos;
+  font-size: 27px;
+  font-weight: 700;
+  line-height: 27px;
   margin-bottom: 24px;
 }
-.legalisation__section .demo {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-pack: start;
-      -ms-flex-pack: start;
-          justify-content: flex-start;
-  -webkit-box-align: start;
-      -ms-flex-align: start;
-          align-items: flex-start;
-  /* скрываем чекбоксы и блоки с содержанием */
-  /* оформляем текст label */
-  /* вид текста label при активном переключателе */
-  /* когда чекбокс активен показываем блоки с содержанием  */
+.legalisation__section h3 {
+  font-family: Golos;
+  font-size: 19px;
+  font-weight: 500;
+  line-height: 21px;
+  color: #4b4a4a;
 }
-.legalisation__section .demo h2 {
-  margin-top: 16px;
-  margin-bottom: 16px;
+.legalisation__section h4 {
+  font-family: Golos;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 19px;
+  color: #4b4a4a;
 }
-.legalisation__section .demo h3 {
-  margin-top: 16px;
-  margin-bottom: 16px;
-}
-.legalisation__section .demo ol {
-  list-style-type: decimal;
-  list-style-position: inside;
-}
-.legalisation__section .demo .legalisation__title {
-  margin-bottom: 8px;
-}
-.legalisation__section .demo .hide {
-  display: none;
-}
-.legalisation__section .demo .hide + label ~ div {
-  display: none;
-}
-.legalisation__section .demo .hide + label {
-  padding: 0;
-  cursor: pointer;
-  display: inline-block;
-}
-.legalisation__section .demo .hide:checked + label {
-  color: red;
-  border-bottom: 0;
-}
-.legalisation__section .demo .hide:checked + label + div {
-  display: block;
-  padding-left: 16px;
+.legalisation__section h5 {
+  font-family: Golos;
+  font-size: 12px;
+  font-weight: 700;
+  line-height: 14px;
+  color: #4b4a4a;
 }
 
-.container .title__section h1, .legalisation__section h1 {
+.container .title__section h1 {
   font-family: Golos;
   font-size: 36px;
   font-weight: 900;
@@ -1125,7 +1110,7 @@ header .nav__container .navigation__mobile .navigation-mobile__box .navigation-m
   line-height: 27px;
 }
 
-.about__section .item .title h3, .money__section h3, .legalisation__section .demo h2 {
+.about__section .item .title h3, .money__section h3 {
   font-family: Golos;
   font-size: 21px;
   font-weight: 500;
@@ -1133,7 +1118,7 @@ header .nav__container .navigation__mobile .navigation-mobile__box .navigation-m
   color: #4b4a4a;
 }
 
-.about__section .item h4, .entry__section h3, .entry__section h4, .legalisation__section .demo h3, .legalisation__section .demo .legalisation__title {
+.about__section .item h4, .entry__section h3, .entry__section h4 {
   font-family: Golos;
   font-size: 16px;
   font-weight: 700;
@@ -1141,7 +1126,7 @@ header .nav__container .navigation__mobile .navigation-mobile__box .navigation-m
   color: #4b4a4a;
 }
 
-.money__section ul li, .entry__section h5, .legalisation__section .demo ol, .legalisation__section .demo .legalisation__text {
+.money__section ul li, .entry__section h5 {
   font-family: Golos;
   font-size: 16px;
   font-weight: 500;
@@ -1190,7 +1175,7 @@ header .nav__container .navigation__mobile .navigation-mobile__box .navigation-m
   max-width: 600px;
 }
 
-.container .title__section h1, .legalisation__section h1 {
+.container .title__section h1 {
   font-family: Golos;
   font-size: 36px;
   font-weight: 900;
@@ -1206,7 +1191,7 @@ header .nav__container .navigation__mobile .navigation-mobile__box .navigation-m
   line-height: 27px;
 }
 
-.about__section .item .title h3, .legalisation__section .demo h2, .money__section h3 {
+.about__section .item .title h3, .money__section h3 {
   font-family: Golos;
   font-size: 21px;
   font-weight: 500;
@@ -1214,7 +1199,7 @@ header .nav__container .navigation__mobile .navigation-mobile__box .navigation-m
   color: #4b4a4a;
 }
 
-.about__section .item h4, .entry__section h3, .entry__section h4, .legalisation__section .demo h3, .legalisation__section .demo .legalisation__title {
+.about__section .item h4, .entry__section h3, .entry__section h4 {
   font-family: Golos;
   font-size: 16px;
   font-weight: 700;
@@ -1222,7 +1207,7 @@ header .nav__container .navigation__mobile .navigation-mobile__box .navigation-m
   color: #4b4a4a;
 }
 
-.entry__section h5, .legalisation__section .demo ol, .legalisation__section .demo .legalisation__text, .money__section ul li {
+.entry__section h5, .money__section ul li {
   font-family: Golos;
   font-size: 16px;
   font-weight: 500;
@@ -1266,7 +1251,7 @@ header .nav__container .navigation__mobile .navigation-mobile__box .navigation-m
   margin-bottom: 16px;
 }
 
-.container .title__section h1, .legalisation__section h1 {
+.container .title__section h1 {
   font-family: Golos;
   font-size: 36px;
   font-weight: 900;
@@ -1282,7 +1267,7 @@ header .nav__container .navigation__mobile .navigation-mobile__box .navigation-m
   line-height: 27px;
 }
 
-.about__section .item .title h3, .legalisation__section .demo h2, .money__section h3 {
+.about__section .item .title h3, .money__section h3 {
   font-family: Golos;
   font-size: 21px;
   font-weight: 500;
@@ -1290,7 +1275,7 @@ header .nav__container .navigation__mobile .navigation-mobile__box .navigation-m
   color: #4b4a4a;
 }
 
-.about__section .item h4, .entry__section h3, .entry__section h4, .legalisation__section .demo h3, .legalisation__section .demo .legalisation__title {
+.about__section .item h4, .entry__section h3, .entry__section h4 {
   font-family: Golos;
   font-size: 16px;
   font-weight: 700;
@@ -1298,7 +1283,7 @@ header .nav__container .navigation__mobile .navigation-mobile__box .navigation-m
   color: #4b4a4a;
 }
 
-.entry__section h5, .legalisation__section .demo ol, .legalisation__section .demo .legalisation__text, .money__section ul li {
+.entry__section h5, .money__section ul li {
   font-family: Golos;
   font-size: 16px;
   font-weight: 500;
@@ -1385,7 +1370,7 @@ header .nav__container .navigation__mobile .navigation-mobile__box .navigation-m
   margin: 0 auto;
 }
 
-.container .title__section h1, .legalisation__section h1 {
+.container .title__section h1 {
   font-family: Golos;
   font-size: 36px;
   font-weight: 900;
@@ -1401,7 +1386,7 @@ header .nav__container .navigation__mobile .navigation-mobile__box .navigation-m
   line-height: 27px;
 }
 
-.legalisation__section .demo h2, .money__section h3, .about__section .item .title h3 {
+.money__section h3, .about__section .item .title h3 {
   font-family: Golos;
   font-size: 21px;
   font-weight: 700;
@@ -1409,7 +1394,7 @@ header .nav__container .navigation__mobile .navigation-mobile__box .navigation-m
   color: #4b4a4a;
 }
 
-.entry__section h3, .entry__section h4, .legalisation__section .demo h3, .legalisation__section .demo .legalisation__title, .about__section .item h4 {
+.entry__section h3, .entry__section h4, .about__section .item h4 {
   font-family: Golos;
   font-size: 16px;
   font-weight: 700;
@@ -1417,7 +1402,7 @@ header .nav__container .navigation__mobile .navigation-mobile__box .navigation-m
   color: #4b4a4a;
 }
 
-.entry__section h5, .legalisation__section .demo ol, .legalisation__section .demo .legalisation__text, .money__section ul li {
+.entry__section h5, .money__section ul li {
   font-family: Golos;
   font-size: 16px;
   font-weight: 500;
@@ -1430,6 +1415,7 @@ header .nav__container .navigation__mobile .navigation-mobile__box .navigation-m
   font-size: 16px;
   font-weight: 500;
   line-height: 19px;
+  color: #4b4a4a;
 }
 
 a:focus {
