--- a/css/style.scss
+++ b/css/style.scss
@@ -52,7 +52,7 @@ $color_text: #4b4a4a;
 }
 
 %h2 {
-    color: $color_text;
+    color: #4b4a4a;
     font-family: Golos;
     font-size: 27px;
     font-weight: 700;
@@ -64,48 +64,49 @@ $color_text: #4b4a4a;
     font-size: 21px;
     font-weight: 700;
     line-height: 21px;
-    color: $color_text;
+    color: #4b4a4a;
 }
 %h4 {
     font-family: Golos;
     font-size: 16px;
     font-weight: 700;
     line-height: 19px;
-    color: $color_text;
+    color: #4b4a4a;
 }
 %BodyM {
     font-family: Golos;
     font-size: 16px;
     font-weight: 500;
     line-height: 19px;
-    color: $color_text;
+    color: #4b4a4a;
 }
 %BodySMBold {
     font-family: Golos;
     font-size: 12px;
     font-weight: 700;
     line-height: 14px;
-    color: $color_text;
+    color: #4b4a4a;
 }
 %BodySM {
     font-family: Golos;
     font-size: 12px;
     font-weight: 400;
     line-height: 14px;
-    color: $color_text;
+    color: #4b4a4a;
 }
 %Text {
     font-family: Golos;
     font-size: 16px;
     font-weight: 500;
     line-height: 19px;
+    color: #4b4a4a;
 }
 %HeadingsXS {
     font-family: Golos;
     font-size: 16px;
     font-weight: 700;
     line-height: 19px;
-    color: $color_text;
+    color: #4b4a4a;
 }
 
 @mixin for-phone-only {
