--- a/css/main.css
+++ b/css/main.css
@@ -20,16 +20,13 @@
 /* когда чекбокс активен показываем блоки с содержанием  */
 .hide:checked + label + div {
     display: block; 
-    background: #efefef;
-    -moz-box-shadow: inset 3px 3px 10px #7d8e8f;
-    -webkit-box-shadow: inset 3px 3px 10px #7d8e8f;
-    box-shadow: inset 3px 3px 10px #7d8e8f;
-    margin-left: 16px;
+    background: white;
+    /* box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 3px 0px, rgba(0, 0, 0, 0.06) 0px 1px 2px 0px; */
     padding: 16px;
     /* чуточку анимации при появлении */
-     -webkit-animation:fade ease-in 0.5s; 
-     -moz-animation:fade ease-in 0.5s;
-     animation:fade ease-in 0.5s; 
+    -webkit-animation:fade ease-in 0.5s; 
+    -moz-animation:fade ease-in 0.5s;
+    animation:fade ease-in 0.5s; 
 }
 /* анимация при появлении скрытых блоков */
 @-moz-keyframes fade {
@@ -45,22 +42,23 @@ to { opacity: 1 }
 to { opacity: 1 }   
 }
 .hide + label:before {
-    background-color: #1e90ff;
+    background-color: grey;
     color: #fff;
     content: "\002B";
     display: block;
     float: left;
-    font-size: 14px; 
+    font-size: 18px; 
     font-weight: bold;
     height: 16px;
     line-height: 16px;
     margin: 3px 5px;
     text-align: center;
     width: 16px;
-    -webkit-border-radius: 50%;
-    -moz-border-radius: 50%;
-    border-radius: 50%;
+    -webkit-border-radius: 10%;
+    -moz-border-radius: 10%;
+    border-radius: 10%;
 }
 .hide:checked + label:before {
     content: "\2212";
+    background-color: #cc0001;
 }
